--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,25 @@ body {
 }
 
 .contacts {
-    display: none;  
+     
 }
 
+
+
+
+.inner-page .is-visible span {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 700;
+    text-align: right;
+}
+
+.inner-page .is-visible a{
+    font-size: 22px;
+    line-height: 24px;
+    font-weight: 700;
+    text-align: right;
+}
 .connection-form {
     display: none;
 }
@@ -194,34 +210,34 @@ body {
     color: #5a5a5a;
 }
 
-.social-links {
+.footer-social-links {
     list-style: none;
 }
 
-.other-nav {
+.footer-other-nav {
     list-style: none;
 }
 
-.other-nav a {
+.footer-other-nav a {
     font-size: 13px;
     line-height: 18px;
     color: inherit;
     font-weight: 400;
 }
 
-.other-nav .for-suppliers {
+.footer-other-nav .for-suppliers {
     
     font-weight: 700;
 }
 
-.copyright p {
+.footer-copyright p {
     font-size: 12px;
     line-height: 18px;
     font-weight: 400;
     color: #fefefe;
 }
 
-.copyright a {
+.footer-copyright a {
     font-size: 12px;
     line-height: 18px;
     font-weight: 400;
@@ -285,4 +301,178 @@ body {
     line-height: 22px;
     font-weight: 500;
     text-align: center;
+}
+
+
+/*---------Сеточные стили---------*/
+
+html,
+body {
+    min-width: 1200px;
+    min-height: 2416px;
+}
+
+.inner-page {
+    min-width: 1200px;
+    min-height: 2416px;
+
+}
+
+.container {
+    width: 1146px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.main-header {
+    margin-bottom: 20px;
+    
+    /*Временно для сетки*/
+    min-height: 73px;
+}
+
+.inner-page .main-header {
+    margin-bottom: 29px;
+}
+
+
+.main-navigation {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.inner-page .main-navigation {
+    display: flex;
+    justify-content: space-between;
+}
+
+.inner-page .main-header-logo {
+    order: 0;
+    width: 154px;
+    height: 64px;
+
+}
+.main-header-logo {
+    order: 0;
+    width: 154px;
+    height: 64px;
+}
+
+.site-navigation {
+    margin: 0;
+    padding: 0;
+    min-width: 573px;
+
+    list-style: none;
+    /*Временно для сетки*/
+    min-height: 64px;
+}
+
+.user-navigation {
+    margin: 0;
+    padding: 0;
+    min-width: 245px;
+    margin-left: auto;
+
+    list-style: none;
+    /*Временно для сетки*/
+    min-height: 64px;
+
+}
+
+.features {
+    margin-bottom: 44px;
+}
+
+.index-columns {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 39px;
+}
+
+.blog {
+    width: 560px;
+}
+
+.newsletter {
+    width: 549px;
+}
+
+.inner-page-breadcrumbs {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.inner-page .is-visible {
+    order: 4;
+    margin-left: auto;
+}
+
+.breadcrumbs {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 13px;
+}
+
+.page-title {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 29px;
+}
+
+.inner-page .products {
+    display: flex;
+    flex-wrap: wrap;
+    
+    margin: 0;
+    padding: 0;
+    
+    min-height: 1043px;
+    margin-bottom: 111px;
+    
+    
+}
+
+
+.inner-page .product {
+    width: 267px;
+    min-height: 320px;
+    margin-bottom: 40px;
+    margin-right: 26px;
+    
+}
+
+.inner-page .product:nth-of-type(4n) {
+    margin-right: 0;
+}
+
+
+
+
+.main-footer .container {
+    display: flex;
+    
+}
+
+.footer-social-links {
+    width:179px;
+    margin: 0;
+    margin-right: 217px;
+    list-style: none;
+
+}
+
+.footer-other-nav {
+    width: 347px;
+    list-style: none;
+}
+
+.footer-copyright {
+    width: 189px;
+    margin: 0;
+    margin-left: auto;
+
+
 }
