Добавила декоративные элементы

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,12 @@ body {
     color: #ffffff;
 
     background-color: #8996a6;
+    position: relative;
     
+}
+
+body * {
+    box-sizing: border-box;
 }
 
 .inner-page {
@@ -89,36 +94,282 @@ body {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)), linear-gradient(to bottom, #e74a35, #f26843);
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+.container {
+    width: 1146px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.main-navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.main-header {
+    margin-bottom: 20px;
+}
+
+.main-header-logo {
+    display: flex;
+    padding-left: auto;
+    margin-top: 9px;
+    order: 0;
+    width: 154px;
+    height: 64px;
+}
 
 
 
 .site-navigation {
+    display: flex;
+    flex-wrap: wrap;
     font-size: 16px;
     line-height: 18px;
     font-weight: bold;
-    
+    margin: 0;
+    padding: 0;
+    min-width: 573px;
+    list-style: none;
+    white-space: nowrap;
 }
 
-.catalog-nav {
-    display: none;
-}
-
-.site-navigation ul {
+.site-navigation ul{
     list-style: none;
 }
 
-.search-form {
-    display: none; 
+.site-navigation a {
+    display: block;
+    padding: 10px 14px;
+    
 }
 
-.email-form {
-    display: none;
+.site-navigation .active {
+    color: #ffffff;
+    background-color: #d07058;
 }
-.user-navigation {
+
+.site-navigation a:hover {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+    color: #323232;
+    background-color: #f7f6f3; 
+}
+
+.site-navigation >li {
+    position: relative;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
+.sub-menu {
+    position: absolute;
+    top: 30px;
+    left: 1px;
+    width: 143px;
+    min-height: 171px;
+    margin: 0;
+    padding: 0;
+    margin-top: 5px;
+    background-color: #f8f7f4;
+    display: none;
+    z-index: 10;
+}
+
+.site-navigation li:hover .sub-menu {
+    display: block;
+}
+
+.sub-menu a {
+    margin-bottom: -1px;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+}
+.sub-menu li:first-child a{
+    font-weight: 700;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+    
+}
+
+.sub-menu a:hover {
+    background-color: #fbded7;
+}
+
+.sub-menu a:focus {
+    background-color: #f6b5a5;
+}
+
+.sub-menu a:active {
+    background-color: #d07058;
+}
+
+
+.user-navigation >li {
+    position: relative;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
+
+.user-navigation .search-form {
+    position: absolute;
+    width: 341px;
+    background-color: #f8f7f4;
+    margin: 0;
+    margin-top: 4px;
+    padding: 20px 15px;
+    left: -295px;
+    top: 40px;
+    display: none;
+    z-index: 10;
+}
+
+.user-navigation li:hover .search-form {
+    display: block;
+}
+
+
+
+.user-navigation .email-form {
+    position: absolute;
+    background-color: #f8f7f4;
+    width: 277px;
+    margin: 0;
+    margin-top: 4px;
+    padding-top: 20px;
+    padding-left: 19px;
+    padding-right: 17px;
+    padding-bottom: 27px;
+
+    top: 40px;
+    left: -185px;
+    display: none;
+    z-index: 10;
+}
+
+.user-navigation li:hover .email-form {
+    display: block;
+}
+
+.product-form .typeface {
+    color: #999999;
+}
+
+.product-form .typeface-bold {
+    font-size: 15px;
+    line-height: 18px;
+    font-weight: 700;
+}
+
+.user-navigation .product-form {
+    position: absolute;
+    font-size: 13px;
+    line-height: 16px;
+    font-weight: 500;
+    color: #323232;
+    background-color: #f8f7f4;
+    width: 539px;
+    margin: 0;
+    margin-top: 4px;
+    padding-top: 20px;
+    padding-left: 21px;
+    padding-right: 13px;
+    padding-bottom: 21px;
+    top: 40px;
+    left: -420px;
+    display: none;
+    z-index: 10;
+}
+
+.user-navigation li:hover .product-form {
+    display: block;
+}
+
+.connection-form {
+    position: fixed;
+    background-color: #f8f7f4;
+    width: 478px;
+    margin: 0;
+    padding-top: 20px;
+    padding-left: 24px;
+    padding-right: 4px;
+    padding-bottom: 28px;
+    top: 100px;
+    left: 50%;
+    margin-left: -261px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #999999;
+    font-weight: 500;
+
+    
+}
+
+.connection-form input:hover {
+    border-color: rgba(154, 154, 154, 0.52);
+}
+
+.connection-form input:focus {
+    border-color: rgba(46, 136, 228, 0.52);
+}
+
+.connection-form input {
+    color: #323232;
+}
+
+.connection-form h1 {
+    font-size: 24px;
+    line-height: 28px;
+    color: #323232;
+    font-weight: 400;
+}
+
+.user-navigation a:hover {
     font-size: 14px;
     line-height: 16px;
     font-weight: 500;
-
+    color: #323232;
+    background-color: #ffffff;
+}
+.user-navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 245px;
+    padding: 0;
+    margin: 0;
+    margin-left: auto;
+    margin-bottom: 20px;
+    
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    list-style: none;
 }
 
 .user-navigation  ul {
@@ -127,39 +378,43 @@ body {
 }
 
 .user-navigation a {
+    display: block;
+    padding: 10px 14px;
     text-decoration: none;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
-.contacts {
-     
+.user-navigation svg {
+    fill: #ffffff;
+    vertical-align: middle;
 }
 
+.user-navigation a:hover svg {
+    fill:#323232;
+}
 
-
-
-.inner-page .is-visible span {
+.user-navigation .has-products {
     font-size: 14px;
     line-height: 16px;
-    font-weight: 700;
-    text-align: right;
-}
+    font-weight: 500;
+    color: #323232;
+    background-color: #ffffff;
+    width: 100px;
+} 
 
-.inner-page .is-visible a{
-    font-size: 22px;
-    line-height: 24px;
-    font-weight: 700;
-    text-align: right;
-}
-.connection-form {
-    display: none;
-}
+.user-navigation .has-products svg {
+    width: 21px;
+    height: 20px;
+    padding-right: 8px;
 
-.visually-hidden {
-    display: none;
 }
-
 
 .features {
+    margin-bottom: 44px;
+    padding-left: 21px;
+    padding-right: 34px;
+    padding-top: 29px;
+    padding-bottom: 26px;
     background-image: url("../img/features-fon.jpg");
 }
 
@@ -171,13 +426,75 @@ body {
 } 
 
 .features p {
+    position: relative;
     font-size: 16px;
     line-height: 22px;
     font-weight: 400;
     color: #323232;
+    height: 82px;
+    width: 480px;
+    padding-left: 58px;
 } 
 
+.features-items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.features .features-item1::before {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 0;
+    top: 0;
+    background: url("../img/feature-icon1.svg") no-repeat 0 0;
+
+}
+
+.features .features-item3::before {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 0;
+    top: 0;
+    background: url("../img/feature-icon2.svg") no-repeat 0 0;
+
+}
+
+.features .features-item2::before {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 0;
+    top: 0;
+    background: url("../img/feature-icon3.svg") no-repeat 0 0;
+
+}
+
+.features .features-item4::before {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 0;
+    top: 0;
+    background: url("../img/feature-icon4.svg") no-repeat 0 0;
+
+}
+
+.index-columns {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 39px;
+}
+
 .blog {
+    padding: 26px 20px;
+    width: 560px;
     background-image: url("../img/blog-fon.jpg");
 }
 
@@ -188,7 +505,7 @@ body {
     color: #323232;
 }
 
-.blog h1 a {
+.blog  a {
     font-size: 24px;
     line-height: 30px;
     font-weight: 700;
@@ -198,6 +515,8 @@ body {
 }
 
 .newsletter {
+    padding: 33px 21px;
+    width: 549px;
     background-color: #f8f7f4;
     border-image: url(../img/border-img.svg);
     border: 2px solid url(../img/border-img.svg);
@@ -210,33 +529,104 @@ body {
     color: #5a5a5a;
 }
 
+.main-footer .container {
+    display: flex;
+}
+.footer-social-links svg {
+    fill: #FFF;
+    opacity: 0.5;
+}
+
+.footer-social-links:hover svg {
+    fill: #FFF;
+    opacity: 0.7;
+}
+
+.footer-social-links:active svg {
+    fill: #e9e9e9;
+
+
+}
 .footer-social-links {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    padding-right: 17px;
+    width: 32px;
+    height: 32px;
+    width:179px;
+    margin-right: 217px;
     list-style: none;
 }
 
 .footer-other-nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+    
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    width: 347px;
     list-style: none;
 }
 
+.footer-other-nav li {
+    margin-bottom: 9px;
+}
+.footer-other-nav li:nth-child(1),
+.footer-other-nav li:nth-child(3) {
+    min-width: 120px;
+    margin-right: 10px;
+}
+
+
 .footer-other-nav a {
+    position: relative;
     font-size: 13px;
     line-height: 18px;
     color: inherit;
     font-weight: 400;
 }
+.for-suppliers::before {
+    position: absolute;
+    content: "❤";
+    color: #ffffff;
+    top: 0;
+    left: -20px;
+    padding-right: 7px;
+    width: 15px;
+    height: 13px;
+}
 
 .footer-other-nav .for-suppliers {
-    
     font-weight: 700;
 }
+
+
+.footer-copyright {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    width: 189px;
+    margin: 0;
+    padding: 0;
+    margin-left: auto;
+}
+
 
 .footer-copyright p {
     font-size: 12px;
     line-height: 18px;
     font-weight: 400;
     color: #fefefe;
+    width: 189px;
 }
-
+.footer-copyright img {
+    margin-bottom: 8px;
+}
 .footer-copyright a {
     font-size: 12px;
     line-height: 18px;
@@ -244,102 +634,8 @@ body {
     color: #fefefe;
 }
 
-.site-navigation .active {
-    color: #ffffff;
-    background-color: #d07058;
-}
-
-.user-navigation .has-products {
-    font-size: 14px;
-    line-height: 16px;
-    font-weight: 500;
-    color: #323232;
-    background-color: #ffffff;
-} 
-
-.site-navigation a:hover {
-    font-size: 16px;
-    line-height: 18px;
-    font-weight: 700;
-    color: #323232;
-    background-color: #f7f6f3; 
-}
-
-.user-navigation a:hover {
-    font-size: 14px;
-    line-height: 16px;
-    font-weight: 500;
-    color: #323232;
-    background-color: #ffffff;
-}
-
-.product-form {
-    display: none;
-}
-
-.breadcrumbs {
-    list-style: none;
-}
-
-.breadcrumbs li {
-    font-size: 14px;
-    line-height: 16px;
-    font-weight: 400;
-    color: #ffffff;
-}
-
-.page-title {
-    font-size: 35px;
-    line-height: 41px;
-    font-weight: 700;
-    color: #ffffff;
-}
-
-.product a {
-    color: #ffffff;
-    font-size: 16px;
-    line-height: 22px;
-    font-weight: 500;
-    text-align: center;
-}
-
-
-/*---------Сеточные стили---------*/
-
-html,
-body {
-    min-width: 1200px;
-    min-height: 2416px;
-}
-
-.inner-page {
-    min-width: 1200px;
-    min-height: 2416px;
-
-}
-
-.container {
-    width: 1146px;
-    margin: 0 auto;
-    padding: 0 10px;
-}
-
-.main-header {
-    margin-bottom: 20px;
-    
-    /*Временно для сетки*/
-    min-height: 73px;
-}
-
 .inner-page .main-header {
     margin-bottom: 29px;
-}
-
-
-.main-navigation {
-    display: flex;
-    justify-content: space-between;
-
 }
 
 .inner-page .main-navigation {
@@ -351,75 +647,89 @@ body {
     order: 0;
     width: 154px;
     height: 64px;
-
 }
-.main-header-logo {
-    order: 0;
-    width: 154px;
-    height: 64px;
-}
-
-.site-navigation {
-    margin: 0;
+.inner-page .user-navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 261px;
     padding: 0;
-    min-width: 573px;
-
-    list-style: none;
-    /*Временно для сетки*/
-    min-height: 64px;
-}
-
-.user-navigation {
     margin: 0;
-    padding: 0;
-    min-width: 245px;
     margin-left: auto;
 
+}
+
+.inner-page .has-products {
+    width: 117px;
+}
+
+.inner-page .has-products svg {
+    width: 21px;
+    height: 20px;
+    padding-right: 7px;
+}
+
+.contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.contacts span {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 700;
+    text-align: right;
+}
+
+ .contacts a{
+    font-size: 22px;
+    line-height: 24px;
+    font-weight: 700;
+    text-align: right;
+}
+
+.breadcrumbs ul {
+    display: flex;
+    justify-content: space-between;
     list-style: none;
-    /*Временно для сетки*/
-    min-height: 64px;
-
-}
-
-.features {
-    margin-bottom: 44px;
-}
-
-.index-columns {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 39px;
-}
-
-.blog {
-    width: 560px;
-}
-
-.newsletter {
-    width: 549px;
-}
-
-.inner-page-breadcrumbs {
-    display: flex;
-    justify-content: space-between;
-    
-}
-
-.inner-page .is-visible {
-    order: 4;
-    margin-left: auto;
-}
-
-.breadcrumbs {
     margin: 0;
     padding: 0;
     margin-bottom: 13px;
+    width: 220px;
 }
 
-.page-title {
+.breadcrumbs li {
+    position: relative;
+    padding-right: 20px;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: #ffffff;
+    
+}
+.breadcrumbs li:not(:last-child)::after {
+    position: absolute;
+    content: "»";
+    top: 0px;
+    left: 65px;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.breadcrumbs li:last-child a{
+    text-decoration: none;
+}
+
+.breadcrumbs .page-title {
+    font-size: 35px;
+    line-height: 41px;
+    font-weight: 700;
+    color: #ffffff;
     margin: 0;
     padding: 0;
-    margin-bottom: 29px;
+    margin-bottom: 30px;
+
 }
 
 .inner-page .products {
@@ -431,48 +741,48 @@ body {
     
     min-height: 1043px;
     margin-bottom: 111px;
-    
-    
 }
 
+.inner-page .product a {
+    display: block;
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 500;
+    text-align: center;
+}
 
 .inner-page .product {
+    position: relative;
     width: 267px;
     min-height: 320px;
     margin-bottom: 40px;
     margin-right: 26px;
-    
 }
 
 .inner-page .product:nth-of-type(4n) {
     margin-right: 0;
 }
 
+.inner-page .price {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 200px;
+    left: 0;
+}
 
-
-
-.main-footer .container {
-    display: flex;
+.inner-page .product:hover {
+    
+    box-shadow: 0px 20px 20px 0 rgba(0, 0, 0, 0.4);
+    background-color:rgba(248, 247, 244, 0.2);
     
 }
 
-.footer-social-links {
-    width:179px;
-    margin: 0;
-    margin-right: 217px;
-    list-style: none;
-
+.inner-page .product .button {
+    display: none;
 }
 
-.footer-other-nav {
-    width: 347px;
-    list-style: none;
-}
-
-.footer-copyright {
-    width: 189px;
-    margin: 0;
-    margin-left: auto;
-
-
+.inner-page .product:hover .button {
+    display: block;
 }
